--- a/.tekton/pipeline-build-image.yaml
+++ b/.tekton/pipeline-build-image.yaml
@@ -119,6 +119,8 @@ spec:
           value: dev
         - name: APP_NAME
           value: helloworld
+        - name: CONTEXT_DIR
+          value: gitops
       workspaces:
         - name: source
           workspace: shared-workspace
